--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,11 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html,
+body,
+:root {
+  height: 100%;
+  background-color: #202124;
 }
+
+/* #606368 */
